--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -60,6 +60,10 @@ body {
 		width: 100%;
 	}
 
+	&--border-radius-default {
+		border-radius: $border-radius-full;
+	}
+
 	&--border-radius-full {
 		border-radius: $border-radius-full;
 	}
@@ -1890,5 +1894,28 @@ body {
 				margin-left: 5px;
 			}
 		}
+	}
+}
+
+
+.vieolo-card {
+	&--border-radius-default {
+		border-radius: $border-radius-normal;
+	}
+
+	&--border-radius-full {
+		border-radius: $border-radius-full;
+	}
+
+	&--border-radius-normal {
+		border-radius: $border-radius-normal;
+	}
+
+	&--border-radius-half {
+		border-radius: $border-radius-half;
+	}
+
+	&--border-radius-none {
+		border-radius: 0px;
 	}
 }
