--- a/style/_base.scss
+++ b/style/_base.scss
@@ -1,20 +1,20 @@
 @use "sass:math";
 
 // Base Unit
-$base-unit: 10px;
+$base-unit: 10px !default;;
 $base-unit-half: math.div($base-unit, 2);
 
 // Heights
-$row-height-small: $base-unit * 3;
-$row-height-medium: $base-unit * 4;
-$row-height-large: $base-unit * 5;
-$row-height-over: $base-unit * 7;
+$row-height-small: $base-unit * 3 !default;;
+$row-height-medium: $base-unit * 4 !default;;
+$row-height-large: $base-unit * 5 !default;;
+$row-height-over: $base-unit * 7 !default;;
 
 // Border Radius
-$border-radius-normal: $base-unit;
-$border-radius-half: $base-unit-half;
-$border-radius-full: $base-unit * 2;
-$border-radius-none: 0;
+$border-radius-normal: $base-unit !default;;
+$border-radius-half: $base-unit-half !default;;
+$border-radius-full: $base-unit * 2 !default;;
+$border-radius-none: 0 !default;;
 
 $box-shadow: 0px 3px 10px rgba(27, 78, 96, 0.2) !default; // deprecated
 $box-shadow-dark: 0px 3px 10px rgba(27, 78, 96, 0.5) !default; // deprecated
