--- a/style/_general.scss
+++ b/style/_general.scss
@@ -505,6 +505,18 @@
 
 .color {
 	@include colorMixin(color, false, !important);
+
+	&--gray-text,
+	&--gray-normal,
+	&--gray-light {
+		color: $gray-text-color;
+	}
+
+	&--default-text,
+	&--default-normal,
+	&--default-light {
+		color: $normal-text-color;
+	}
 }
 
 .hover {
@@ -766,6 +778,13 @@
 }
 .disabled {
 	@include disabled;
+}
+
+
+.cursor {
+	&--pointer {
+		cursor: pointer;
+	}
 }
 
 // #endregion
