Added content background variable

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -26,6 +26,7 @@ $universal-border-radius-half: 5px !default; // deprecated
 // Pallet Colors
 
 $background-color: #fffffb !default;
+$content-background-color: #fffffb !default;
 $hover-color: rgb(220, 247, 231) !default;
 $border-color: #f2f2f2 !default;
 
