--- a/style/_general.scss
+++ b/style/_general.scss
@@ -826,160 +826,117 @@
 	}
 }
 
-.max-width,
-.width {
+
+@mixin widthAndHeightSizes($dim) {
+	&--none {
+		#{$dim}: 0px;
+	}
+
+	&--half {
+		#{$dim}: $base-unit-half;
+	}
+
+	&--one {
+		#{$dim}: $base-unit;
+	}
+
+	&--two {
+		#{$dim}: $base-unit-two;
+	}
+
 	&--px-600 {
-		width: 600px;
+		#{$dim}: 600px;
 	}
 
 	&--px-500 {
-		width: 500px;
+		#{$dim}: 500px;
 	}
 
 	&--px-400 {
-		width: 400px;
+		#{$dim}: 400px;
 	}
 
 	&--px-300 {
-		width: 300px;
+		#{$dim}: 300px;
 	}
 
 	&--px-200 {
-		width: 200px;
+		#{$dim}: 200px;
 	}
 
 	&--px-150 {
-		width: 150px;
+		#{$dim}: 150px;
 	}
 
 	&--px-100 {
-		width: 100px;
+		#{$dim}: 100px;
 	}
 
 	&--vw-100 {
-		width: 100vw;
+		#{$dim}: 100vw;
 	}
 
 	&--vw-90 {
-		width: 90vw;
+		#{$dim}: 90vw;
 	}
 
 	&--vw-80 {
-		width: 80vw;
+		#{$dim}: 80vw;
 	}
 
 	&--vw-70 {
-		width: 70vw;
+		#{$dim}: 70vw;
 	}
 
 	&--vw-60 {
-		width: 60vw;
+		#{$dim}: 60vw;
 	}
 
 	&--vw-50 {
-		width: 50vw;
+		#{$dim}: 50vw;
 	}
 
 	&--pc-100 {
-		width: 100%;
+		#{$dim}: 100%;
 	}
 
 	&--pc-90 {
-		width: 90%;
+		#{$dim}: 90%;
 	}
 
 	&--pc-80 {
-		width: 80%;
+		#{$dim}: 80%;
 	}
 
 	&--pc-70 {
-		width: 70%;
+		#{$dim}: 70%;
 	}
 
 	&--pc-60 {
-		width: 60%;
+		#{$dim}: 60%;
 	}
 
 	&--pc-50 {
-		width: 50%;
+		#{$dim}: 50%;
 	}
 }
 
 
+.max-width {
+	@include widthAndHeightSizes("max-width");
+}
 
-.max-height,
+.width {
+	@include widthAndHeightSizes("width");
+}
+
+
+.max-height {
+	@include widthAndHeightSizes(("max-height"))
+}
+
 .height {
-	&--px-600 {
-		height: 600px;
-	}
-
-	&--px-500 {
-		height: 500px;
-	}
-
-	&--px-400 {
-		height: 400px;
-	}
-
-	&--px-300 {
-		height: 300px;
-	}
-
-	&--px-200 {
-		height: 200px;
-	}
-
-	&--px-100 {
-		height: 100px;
-	}
-
-	&--vh-100 {
-		height: 100vh;
-	}
-
-	&--vh-90 {
-		height: 90vh;
-	}
-
-	&--vh-80 {
-		height: 80vh;
-	}
-
-	&--vh-70 {
-		height: 70vh;
-	}
-
-	&--vh-60 {
-		height: 60vh;
-	}
-
-	&--vh-50 {
-		height: 50vh;
-	}
-
-	&--pc-100 {
-		height: 100%;
-	}
-
-	&--pc-90 {
-		height: 90%;
-	}
-
-	&--pc-80 {
-		height: 80%;
-	}
-
-	&--pc-70 {
-		height: 70%;
-	}
-
-	&--pc-60 {
-		height: 60%;
-	}
-
-	&--pc-50 {
-		height: 50%;
-	}
+	@include widthAndHeightSizes(("height"))
 }
 
 
