--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1982,3 +1982,31 @@ body {
 		justify-content: end;
 	}
 }
+
+
+.vieolo-title-period-card {
+	&__header {
+		height: $row-height-large;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		
+		&__text {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			height: 100%;
+			
+			&__date {
+				display: flex;
+				align-items: flex-end;
+				column-gap: $base-unit;
+			}
+		}
+
+		&__action {
+			display: flex;
+			flex-direction: row-reverse;
+		}
+	}
+}
