Restructured the Color palette

--- a/style/_general.scss
+++ b/style/_general.scss
@@ -376,54 +376,72 @@
 		@return $primary-color-light;
 	} @else if $colorName == "primary" and $colorType == "text" {
 		@return $primary-color-text;
+	} @else if $colorName == "primary" and $colorType == "text-light" {
+		@return $primary-color-text-light;
 	} @else if $colorName == "secondary" and $colorType == "normal" {
 		@return $secondary-color-normal;
 	} @else if $colorName == "secondary" and $colorType == "light" {
 		@return $secondary-color-light;
 	} @else if $colorName == "secondary" and $colorType == "text" {
 		@return $secondary-color-text;
+	} @else if $colorName == "secondary" and $colorType == "text-light" {
+		@return $secondary-color-text-light;
 	} @else if $colorName == "tertiary" and $colorType == "normal" {
 		@return $tertiary-color-normal;
 	} @else if $colorName == "tertiary" and $colorType == "light" {
 		@return $tertiary-color-light;
 	} @else if $colorName == "tertiary" and $colorType == "text" {
 		@return $tertiary-color-text;
+	} @else if $colorName == "tertiary" and $colorType == "text-light" {
+		@return $tertiary-color-text-light;
 	} @else if $colorName == "alert" and $colorType == "normal" {
 		@return $alert-color-normal;
 	} @else if $colorName == "alert" and $colorType == "light" {
 		@return $alert-color-light;
 	} @else if $colorName == "alert" and $colorType == "text" {
 		@return $alert-color-text;
+	} @else if $colorName == "alert" and $colorType == "text-light" {
+		@return $alert-color-text-light;
 	} @else if $colorName == "error" and $colorType == "normal" {
 		@return $error-color-normal;
 	} @else if $colorName == "error" and $colorType == "light" {
 		@return $error-color-light;
 	} @else if $colorName == "error" and $colorType == "text" {
 		@return $error-color-text;
+	} @else if $colorName == "error" and $colorType == "text-light" {
+		@return $error-color-text-light;
 	} @else if $colorName == "success" and $colorType == "normal" {
 		@return $success-color-normal;
 	} @else if $colorName == "success" and $colorType == "light" {
 		@return $success-color-light;
 	} @else if $colorName == "success" and $colorType == "text" {
 		@return $success-color-text;
+	} @else if $colorName == "success" and $colorType == "text-light" {
+		@return $success-color-text-light;
 	} @else if $colorName == "accessory-blue" and $colorType == "normal" {
 		@return $accessory-blue-normal;
 	} @else if $colorName == "accessory-blue" and $colorType == "light" {
 		@return $accessory-blue-light;
 	} @else if $colorName == "accessory-blue" and $colorType == "text" {
 		@return $accessory-blue-text;
+	} @else if $colorName == "accessory-blue" and $colorType == "text-light" {
+		@return $accessory-blue-text-light;
 	} @else if $colorName == "accessory-green" and $colorType == "normal" {
 		@return $accessory-green-normal;
 	} @else if $colorName == "accessory-green" and $colorType == "light" {
 		@return $accessory-green-light;
 	} @else if $colorName == "accessory-green" and $colorType == "text" {
 		@return $accessory-green-text;
+	} @else if $colorName == "accessory-green" and $colorType == "text-light" {
+		@return $accessory-green-text-light;
 	} @else if $colorName == "accessory-orange" and $colorType == "normal" {
 		@return $accessory-orange-normal;
 	} @else if $colorName == "accessory-orange" and $colorType == "light" {
 		@return $accessory-orange-light;
 	} @else if $colorName == "accessory-orange" and $colorType == "text" {
 		@return $accessory-orange-text;
+	} @else if $colorName == "accessory-orange" and $colorType == "text-light" {
+		@return $accessory-orange-text-light;
 	}
 }
 
@@ -439,6 +457,10 @@
 
 		&--#{$c}-text {
 			#{$property}: getColorVariable($c, "text") unquote($optionalSuffix);
+		}
+
+		&--#{$c}-text-light {
+			#{$property}: getColorVariable($c, "text-light") unquote($optionalSuffix);
 		}
 	}
 
