--- a/style/_base.scss
+++ b/style/_base.scss
@@ -129,10 +129,10 @@ $header-font-bold-weight: 600 !default; // deprecated
 
 $font-weight-light: 300 !default;
 $font-weight-normal: 400 !default;
-$font-weight-bold: 600 !default;
-$font-weight-extra-bold: 700 !default;
+$font-weight-bold: 700 !default;
+$font-weight-extra-bold: 900 !default;
 
-$font-family-primary: "Roboto Condensed", sans-serif !default;
+$font-family-primary: 'Roboto', sans-serif !default;
 $font-family-secondary: "Montserrat", sans-serif !default;
 
 // Elevation
