--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -23,7 +23,7 @@ body {
 	transition: background 0.8s;
 	font-size: 16px;
 	min-width: 80px;
-	@include font-header;
+	font-weight: $font-weight-bold;
 
 	&:focus {
 		outline: auto 5px -webkit-focus-ring-color;
@@ -98,7 +98,7 @@ body {
 	height: 14px;
 	width: 14px;
 	border-radius: 50%;
-	@include font-header;
+	font-weight: $font-weight-bold;
 	@include center-by-flex-row;
 	@include primary-background;
 }
@@ -144,7 +144,7 @@ body {
 		label {
 			margin: 0;
 			font-size: 12px;
-			@include font-header;
+			font-weight: $font-weight-bold;
 		}
 	}
 }
@@ -591,7 +591,7 @@ body {
 			font-size: 12px;
 			margin: 0;
 			padding: 10px 0px 3px 10px;
-			@include font-header;
+			font-weight: $font-weight-bold;
 			border-bottom: 1px solid $primary-color-normal;
 			position: sticky;
 			top: 0;
@@ -618,7 +618,6 @@ body {
 	margin-top: 0;
 	padding: 10px 0;
 	border-radius: 10px 10px 0 0;
-	@include font-header;
 
 	& > p {
 		margin: 5px 0;
@@ -700,7 +699,7 @@ body {
 
 		p {
 			font-size: 11px;
-			@include font-header;
+			font-weight: $font-weight-bold;
 			@include nonselectable;
 		}
 
@@ -1518,7 +1517,7 @@ body {
 				border: 1px solid $primary-color-normal;
 				border-top: none;
 				font-size: 10px;
-				@include font-header;
+				font-weight: $font-weight-bold;
 			}
 		}
 	}
@@ -1757,7 +1756,7 @@ body {
 		p {
 			margin: 5px;
 			font-size: 12px;
-			@include font-header;
+			font-weight: $font-weight-bold;
 		}
 	}
 
@@ -1876,7 +1875,7 @@ body {
 		label {
 			margin: 0;
 			font-size: 12px;
-			@include font-header;
+			font-weight: $font-weight-bold;
 		}
 	}
 
