Added font family to the Typography

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -133,7 +133,7 @@ $font-weight-bold: 700 !default;
 $font-weight-extra-bold: 900 !default;
 
 $font-family-primary: 'Roboto', sans-serif !default;
-$font-family-secondary: "Montserrat", sans-serif !default;
+$font-family-secondary: "Archivo", sans-serif !default;
 
 // Elevation
 $elevation-shadow-0: none;
