--- a/style/_general.scss
+++ b/style/_general.scss
@@ -1626,6 +1626,24 @@
 	}
 }
 
+.text-align {
+	&--left {
+		text-align: left;
+	}
+
+	&--center {
+		text-align: center;
+	}
+
+	&--right {
+		text-align: right;
+	}
+
+	&--justify {
+		text-align: justify;
+	}
+}
+
 
 @mixin no-text-overflow {
 	white-space: nowrap;
