--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -814,11 +814,12 @@ body {
 	text-align: center;
 
 	&__toolbar {
-		background-color: $tertiary-color-normal;
+		background-color: $content-background-color;
 		height: 30px;
 		padding: 1px;
 		border-radius: inherit;
 		width: 100%;
+		border: 1px solid $primary-color-normal;
 		@include flex-row-space-between;
 	}
 
